// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can be presented as one of the allowed variants 1`] = `
.c0 {
  border-width: 0;
  border-radius: 4px;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0 2rem;
  cursor: pointer;
  background: none;
  -webkit-transition: background 0.2s;
  transition: background 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  min-height: 3.25rem;
  background-color: #4b286d;
  color: #fff;
}

.c0:after {
  content: "";
  min-height: inherit;
  font-size: 0;
}

.c0:hover {
  box-shadow: 0 0 0 0.0625rem;
  background-color: #fff;
  color: #4b286d;
}

.c1 {
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    width: auto;
    min-width: 180px;
  }
}

@media (hover:none) {
  .c0:hover {
    box-shadow: none;
    background-color: #4b286d;
    color: #fff;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1"
  >
    Submit
  </span>
</button>
`;

exports[`Button can be presented as one of the new allowed variants 1`] = `
.c0 {
  border-width: 0;
  border-radius: 4px;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0 2rem;
  cursor: pointer;
  background: none;
  -webkit-transition: background 0.2s;
  transition: background 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  min-height: 3.25rem;
  background-color: #fff;
  color: #2B8000;
  border: 0.0625rem solid #2B8000;
  -webkit-transition: background 0.2s,color 0.2s,border 0.2s ease;
  transition: background 0.2s,color 0.2s,border 0.2s ease;
}

.c0:after {
  content: "";
  min-height: inherit;
  font-size: 0;
}

.c0:hover {
  box-shadow: 0 0 0 0.125rem #2B8000;
}

.c0:active {
  background-color: #F4F9F2;
  color: #1F5C09;
}

.c0:focus {
  outline: none !important;
  border: 0.0625rem solid #509F33;
  box-shadow: 0 0 0 0.125rem #509F33,0 0 0 0.125rem #fff inset,0 0 0 0.1875rem #2B8000 inset;
}

.c1 {
  width: 100%;
  margin-top: -1px;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    width: auto;
    min-width: 180px;
  }
}

@media (hover:none) {
  .c0:hover {
    box-shadow: none;
    background-color: #fff;
    color: #2B8000;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1"
  >
    Submit
  </span>
</button>
`;

exports[`Button renders 1`] = `
.c0 {
  border-width: 0;
  border-radius: 4px;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0 2rem;
  cursor: pointer;
  background: none;
  -webkit-transition: background 0.2s;
  transition: background 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  min-height: 3.25rem;
  background-color: #2B8000;
  color: #fff;
}

.c0:after {
  content: "";
  min-height: inherit;
  font-size: 0;
}

.c0:hover {
  box-shadow: 0 0 0 0.0625rem;
  background-color: #fff;
  color: #2B8000;
}

.c1 {
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    width: auto;
    min-width: 180px;
  }
}

@media (hover:none) {
  .c0:hover {
    box-shadow: none;
    background-color: #2B8000;
    color: #fff;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1"
  >
    Submit
  </span>
</button>
`;
